--- a/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -8,6 +8,14 @@
 
 <h1 th:text="${name}"></h1>
 <h1 th:text="${course}"></h1>
+<h1 th:text="${subject}"></h1>
+<h1 th:text="${id}"></h1>
+<h1 th:text="${numbers}"></h1>
+<h1 th:text="${localDate.getDayOfWeek()}"></h1>
+<h1 th:text="${localDate.getDayOfYear()}"></h1>
+<h1 th:text="${time.getMinute()}"></h1>
+<h1 th:text="${student}"></h1>
+<h1 th:text="${student.firstName}"></h1>
 
 </body>
 </html>
