--- a/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -14,6 +14,18 @@
 <h2 th:text="${'Hello ' + students.get(0).firstName}"></h2>
 <h2 th:text="${students.get(0).firstName + ' ' + students.get(0).lastName}"></h2>
 
+<!--Link -->
+
+<h2><a th:href="@{https://www.cydeo.com}">Cydeo Page</a></h2>
+
+<h2><a th:href="@{/student/welcome}">Welcome</a></h2>
+
+<!--Adding parameters in link -->
+<h2><a th:href="@{/student/welcome(id=3)}">Link</a></h2>
+
+
+<h2><a th:href="@{/student/welcome(name = ${students.get(0).getFirstName()})}">Link2</a></h2>
+
 
 </body>
 </html>
