--- a/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -26,6 +26,15 @@
 
 <h2><a th:href="@{/student/welcome(name = ${students.get(0).getFirstName()})}">Link2</a></h2>
 
+<!--Iteration-->
+<h2>Printing students first name</h2>
+<ul>
+    <li th:each="student : ${students}" th:text="${student.getFirstName()}"></li>
+</ul>
+<h2>Printing students last name</h2>
+<ul>
+    <li th:each="student : ${students}" th:text="${student.getLastName()}"></li>
+</ul>
 
 </body>
 </html>
