--- a/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -36,5 +36,29 @@
     <li th:each="student : ${students}" th:text="${student.getLastName()}"></li>
 </ul>
 
+
+<h2>Printing students in table</h2>
+
+<table>
+    <thead>
+    <tr>
+        <td>First Name</td>
+        <td>Last Name</td>
+        <td>Age</td>
+        <td>State</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="student : ${students}">
+        <td th:text="${student.firstName}"></td>
+        <td th:text="${student.lastName}"></td>
+        <td th:text="${student.age}"></td>
+        <td th:text="${student.state}"></td>
+    </tr>
+
+    </tbody>
+</table>
+
+
 </body>
 </html>
