--- a/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/spring-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -2,9 +2,24 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cydeo</title>
+
+    <link th:href="@{/css/bootstrap-4.1.3-dist/css/bootstrap.css}" rel="stylesheet">
+
+    <link th:href="@{/css/custom.css}" rel="stylesheet">
+
+
 </head>
 <body>
+
+<!--Bootstrap Integration-->
+<h2 class="display-1 text-danger">Welcome to Cydeo student's Register form</h2>
+
+<h2 class="cydeo"> My Custom CSS</h2>
+
+<!--Image Integration-->
+
+<img th:src="@{/images/welcome-38249.png}">
 
 <!--Display Value of Model-->
 <h2 th:text="${students.get(0).getFirstName()}"></h2>
